kubernetes/default-namespace-with-istio-enabled.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: default
  name: default
